# django-dbtemplates

./: .gitignore  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg
dbtemplates/: __init__.py  loader.py  models.py
dbtemplates/migrations/: 0002_auto_20151012_0443.py
