[metadata]
name = leonardo-dbtemplates
summary = Template loader for templates stored in the database. Leonardo Fork from Jannis Leidel
description-file =
    README.rst
author = Michael Kuty
author-email = mail@michaelkuty.eu
home-page = https://github.com/django-leonardo/django-dbtemplates
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    dbtemplates

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_docs]
upload-dir = docs/_build/html

[upload_sphinx]
upload-dir = docs/_build/html
